--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
-
+*{
+    margin: 0;
+    padding: 0;
+}
+.container {
+   
+    margin: 0 6%;
+    /* background-color: violet; */
+    text-align: center;
+}
 img {
     display: block;
     margin: 0 auto 0 auto;
     width: auto;
-    height: 100px;
+    /* height: 113px; */
+    /* border: 1px solid black; */
     }
 #baslik {
     margin-bottom: 0;
@@ -11,46 +21,68 @@ img {
 .search {
     background-color:#EEEEEE;
     height: auto;
-    margin: 0 4%;
+    /* margin: 0 4%; */
     display: block;
     text-align: center;
+    /* border: 1px solid black; */
 }
 .example {
     width:;
 }
 .content {
     width: 100%;
-    margin: 2px 4%;
+    /* margin: 2px 4%; */
+    display: flex;
+    /* ************************************************* */
+    /* flex-direction: column; */
+    align-items: center;
+    /* background-color: yellow; */
+    justify-content: center;
+    /* *************************************************** */
+    gap: 2px;
+    margin-top: 2px;
+    /* display: grid;  buna bak yarın*/
 }
 .box1, .box2, .box3 {
     
     padding: 5px 3px;
-    float: left;
-    margin: 1px 1px ;
+    /* float: left; */
+    /* margin: 1px 1px ; */
     text-align: center;
     width: 30%;
     height: 67px;
     font-size: small;
     }
-.clear {
-    clear: both;
-}
+
 .box3 {
     background-color:#62B3AA;
-    width: 35%;
+    width: 37%;
     font-size: small;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .box2 {
     background-color:rgb(112, 204, 194);
-    width: 20%;
+    width: 26%;
     font-size: small;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .box1 {
     background-color: rgb(126, 229, 218);
-    width: 35%;
+    width: 37%;
     font-size: medium;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .telif {
     text-align: center;
     font-size: small;
+}
+#bar {
+    width: 20%;
 }
